--- a/index.css
+++ b/index.css
@@ -43,6 +43,8 @@ li a{
 }
 main{
     width: 85%;
+    height: 100%;
+    float: right;
 }
 main header{
     display: flex;
@@ -75,3 +77,52 @@ input.checkbox-nav:checked ~ label .fa-bars{
 input.checkbox-nav:checked ~ .toggle-nav{
     left: 20.2%;
 }
+label .fa-solid {
+    opacity: 1;
+    transition: 0.5s;
+}
+input.checkbox-theme:checked ~ label .fa-solid {
+    opacity: 1;
+    transition: 0.5s;
+}
+input.checkbox-theme:checked ~ label .fa-regular {
+    opacity: 0;
+    transition: 0.5;
+}
+input.cheeckbox-theme :checked ~ section{
+    /* display: none; */
+    background-colour: #2f2e41;
+    background-colour: #111927;
+    transition: 0.3s;
+    color :whitesmoke;
+
+   
+}
+input.checkbox-theme :checked ~ section h1{
+    display: none;
+    color: #fff;
+}
+input.checkbox-theme :checked ~ section h3{
+    display: none;
+    color: #00bfa6;
+}
+input.checkbox-theme:checked ~ section p{
+display: none;
+color: gainsboro;
+}
+nav ul li a span{
+    display: none;
+}
+input.checkbox-nav:checked ~  nav ul li a span {
+    display: inline-block;
+ }
+ .main-content {
+    width: 100%;
+    height: 80%;
+    margin: auto;
+    float: right;
+ }
+ .main-content .banner {
+    display: flex;
+    align-items: center;
+ }
